# Cosmosnaut

./: Cargo.toml  README.md  deny.toml  flake.nix
src/: lib.rs  main.rs
tests/: create_db.rs
