[package]
name = "cosmosnaut"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
azure_data_cosmos = { version = "0.19.0", features = ["enable_reqwest_rustls"] }
serde_json = "1.0"
thiserror = "1.0.57"

[dev-dependencies]
assertor = "0.0.2"
axum-test = "14.3.0"
azure_core = { version = "0.19.0", features = ["enable_reqwest_rustls"] }
azure_data_cosmos = { version = "0.19.0", features = ["enable_reqwest_rustls"] }
bytes = "1.5.0"
futures = "0.3.30"
futures-core = "0.3.30"
reqwest = { version = "0.11.24", features = ["rustls-tls", "stream"] }
url = "2.5.0"


